--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" />
 
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAiwADoQJi-YTxR0Bt9oa-_0h_SN0gmGls" type="text/javascript"></script>
+
 </head>
 
 <body>
